# Atlas-code

./: .gitignore  README.md  claude.MD  main.py  pyproject.toml  requirements.txt  scratch_test.py
afdad/: __init__.py  main.py
afdad/agents/: __init__.py  base.py  coder.py  critic.py  debugger.py  planner.py
afdad/configs/: config.yaml
afdad/configs/experiment/: default.yaml
afdad/configs/model/expert/: expert.yaml
afdad/configs/model/student/: student.yaml
afdad/configs/training/: lora.yaml
afdad/datasets/: __init__.py  loaders.py
afdad/distillation/: __init__.py  dataset_builder.py  lora_train.py  trainer.py
afdad/evaluation/: __init__.py  benchmark_base.py  humaneval.py  mbpp.py  metrics.py  reporter.py
afdad/execution/: __init__.py  evaluator.py  executor.py  sandbox.py
afdad/failures/: __init__.py  clustering.py  encoder.py  memory.py
afdad/graph/: __init__.py  nodes.py  routing.py  state.py  workflow.py
afdad/prompts/: __init__.py  coder.py  critic.py  debugger.py  planner.py
afdad/training/: __init__.py  train_student.py
afdad/trajectories/: __init__.py  collector.py  replay_buffer.py
afdad/utils/: __init__.py  experiment.py  logging.py  models.py  reproducibility.py
scratch/: test_logrecord.py  test_visualise.py
scripts/: evaluate.sh  start_expert_server.sh  start_student_server.sh
tests/: conftest.py
tests/integration/: test_ablations.py
tests/unit/: test_clustering.py  test_collector.py  test_encoder.py  test_executor.py  test_memory.py  test_metrics.py  test_models.py  test_replay_buffer.py  test_routing.py
