[project]
name = "atlas-code"
version = "0.1.0"
description = "AFDAD — Adaptive Failure-Driven Agentic Distillation"
readme = "README.md"
requires-python = ">=3.13"
dependencies = [
    # Agent Orchestration
    "langgraph>=1.2.5",
    "langchain-core>=0.3.0",
    "langchain-openai>=0.2.0",
    # LLM Client
    "openai>=2.43.0",
    # Data Validation
    "pydantic>=2.7.0",
    # Configuration
    "hydra-core>=1.3.0",
    "omegaconf>=2.3.1",
    # Embeddings
    "sentence-transformers>=3.0.0",
    # Clustering & Numerics
    "scikit-learn>=1.5.0",
    "numpy>=2.4.6",
    # Training
    "transformers>=4.44.0",
    "peft>=0.12.0",
    "trl>=0.9.0",
    "datasets>=5.0.0",
    "accelerate>=0.33.0",
    # Experiment Tracking
    "wandb>=0.27.2",
    # Evaluation
    "human-eval>=1.0.3",
    # Utilities
    "rich>=13.7.0",
    "tenacity>=9.1.4",
    "aiofiles>=24.1.0",
    "tqdm>=4.66.0",
]
