[project]
name = "atlas-code"
version = "0.1.0"
description = "AFDAD — Adaptive Failure-Driven Agentic Distillation"
readme = "README.md"
requires-python = ">=3.12"
license = {text = "MIT"}
dependencies = [
    # Agent Orchestration
    "langgraph>=0.2.0",
    "langchain-core>=0.3.0",
    "langchain-openai>=0.2.0",
    # LLM Client
    "openai>=1.40.0",
    # Data Validation
    "pydantic>=2.7.0",
    # Configuration
    "hydra-core>=1.3.0",
    "omegaconf>=2.3.0",
    # Embeddings
    "sentence-transformers>=3.0.0",
    # Clustering & Numerics
    "scikit-learn>=1.5.0",
    "numpy>=1.26.0",
    # Training
    "torch>=2.3.0",
    "transformers>=4.44.0",
    "peft>=0.12.0",
    "trl>=0.9.0",
    "datasets>=2.20.0",
    "bitsandbytes>=0.43.0",
    "accelerate>=0.33.0",
    # Experiment Tracking
    "wandb>=0.17.0",
    # Database
    "aiosqlite>=0.20.0",
    # Evaluation Benchmarks
    "human-eval>=1.0.3",
    # Utilities
    "rich>=13.7.0",
    "tenacity>=8.4.0",
    "aiofiles>=24.1.0",
    "tqdm>=4.66.0",
]

[project.optional-dependencies]
dev = [
    "pytest>=8.0.0",
    "pytest-asyncio>=0.23.0",
    "pytest-cov>=5.0.0",
    "mypy>=1.10.0",
    "ruff>=0.4.0",
]
eval = [
    "human-eval>=1.0.3",
    "datasets>=2.20.0",
]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["afdad"]


[tool.pytest.ini_options]
testpaths = ["tests"]
asyncio_mode = "auto"
markers = [
    "slow: marks tests as slow (deselect with '-m \"not slow\"')",
    "integration: marks integration tests",
]

[tool.ruff]
target-version = "py312"
line-length = 100

[tool.ruff.lint]
select = ["E", "F", "W", "I", "UP", "B", "SIM", "RUF"]
ignore = ["E501"]

[tool.mypy]
python_version = "3.12"
warn_return_any = true
warn_unused_configs = true
disallow_untyped_defs = false
